syntax = "proto3";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  string product_id = 1;
}

message ProductResponse {
  Product product = 1;
}

